--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-reveal": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-reveal": "^1.2.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
